# licensing-common

./: .envrc  .gitignore  .tool-versions  Makefile  README.md  compose.yaml  pyproject.toml
apply_for_a_licence/: manage.py
apply_for_a_licence/apply_for_a_licence/: asgi.py  settings.py  urls.py  wsgi.py
apply_for_a_licence/apply_for_a_licence/enums/: countries.py  snac_codes.py
apply_for_a_licence/apply_for_a_licence/models/: authorities.py  licences.py  utils.py
apply_for_a_licence/apply_for_a_licence/tests/: test_licences.py
apply_for_a_licence/apply_for_a_licence/tests/model/: test_authorities.py  test_licences.py
common/enums/: countries.py  interaction_id_codes.py  tacit_consent.py
common/models/: authorities.py  licences.py  utils.py
common/tests/model/: test_authorities.py  test_licences.py
config/: asgi.py  settings.py  wsgi.py
