[project]
name = "apply-for-a-licence"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django==5.2.0",
    "django-mongodb-backend>=5.2.3",
    "pymongo>=4.17.0",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "apply_for_a_licence.settings"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.22",
]

[tool.ruff]
line-length = 120

extend-exclude = [
    "migrations/versions/",
    "__pycache__",
    "cache",
    "migrations",
]

[tool.ruff.lint]
extend-select = [
    "DJ",
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C90",
    "G",
    "T20",
    "C4",
    "ISC",
    "RSE",
    "PIE",
    "N804",
    "RUF100",
]
